@@ -3,6 +3,7 @@ Changes in Version 0.6-7 (in development)
 
  o function simpleSmoothTs (calculations for panel.tskernel).
 
+ o changed panel.xblocks() to show data coverage by default.
 
 Changes in Version 0.6-6
 
